# LIPA

./: .gitmodules  CMakeLists.txt  LinearOptimizationProblem.cpp  LinearOptimizationProblem.hpp  LinearOptimizationResult.cpp  LinearOptimizationResult.hpp  README.md  Test.cpp  Test.h  main.cpp  optimization.cpp  optimization.hpp
visualization/: Affine scaling visualization.ipynb  results.csv
